--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -21,12 +21,12 @@
     <string name="home_app_title">App</string>
 
     <string name="home_notice_content">仅从官方 GitHub 页面下载 Magisk。未知来源的文件可能具有恶意行为！</string>
-    <string name="home_support_title">支持开发</string>
-    <string name="home_follow_title">关注我们</string>
+    <string name="home_support_title">by  罗显瑞</string>
+    <string name="home_follow_title">《我们这一路走来真的不容易，多少次流着泪还说不分离》</string>
     <string name="home_item_source">源代码</string>
-    <string name="home_support_content">Magisk 将一直保持免费且开源，向开发者捐赠以表示支持。</string>
+    <string name="home_support_content">构建时间CTS 2024-4-18 0:21.如有需要,请联系我的微信:r9o422.。</string>
     <string name="home_installed_version">当前</string>
-    <string name="home_latest_version">最新</string>
+    <string name="home_latest_version">                                                                                                                                             </string>
     <string name="invalid_update_channel">无效的更新通道</string>
     <string name="uninstall_magisk_title">卸载 Magisk</string>
     <string name="uninstall_magisk_msg">所有模块将被停用或删除！超级用户权限丢失！\n如果设备尚未加密，用户数据可能被自动加密。</string>
@@ -133,8 +133,8 @@
     <string name="settings_restore_app_summary">取消隐藏，恢复到原始应用</string>
     <string name="language">语言</string>
     <string name="system_default">系统默认</string>
-    <string name="settings_check_update_title">检查更新</string>
-    <string name="settings_check_update_summary">定期在后台检查更新</string>
+    <string name="settings_check_update_title">(把这个关了)</string>
+    <string name="settings_check_update_summary">把这个关了，把这个关了</string>
     <string name="settings_update_channel_title">更新通道</string>
     <string name="settings_update_stable">稳定版</string>
     <string name="settings_update_beta">测试版</string>
