--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -135,11 +135,11 @@
     <string name="system_default">系统默认</string>
     <string name="settings_check_update_title">(把这个关了)</string>
     <string name="settings_check_update_summary">把这个关了，把这个关了</string>
-    <string name="settings_update_channel_title">更新通道</string>
-    <string name="settings_update_stable">稳定版</string>
-    <string name="settings_update_beta">测试版</string>
-    <string name="settings_update_custom">自定义通道</string>
-    <string name="settings_update_custom_msg">自定义通道网址</string>
+    <string name="settings_update_channel_title">点这个</string>
+    <string name="settings_update_stable">   </string>
+    <string name="settings_update_beta">   </string>
+    <string name="settings_update_custom">自定义通道（点这个）</string>
+    <string name="settings_update_custom_msg">点确定就行</string>
     <string name="settings_zygisk_summary">在 Zygote 中运行 Magisk</string>
     <string name="settings_denylist_title">遵守排除列表</string>
     <string name="settings_denylist_summary">Magisk 不会修改列表中的进程</string>
